--- a/web/encounterBattleMember/List.xhtml
+++ b/web/encounterBattleMember/List.xhtml
@@ -22,6 +22,24 @@
                     <h:dataTable value="#{encounterBattleMemberController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
                         <h:column>
                             <f:facet name="header">
+                                <h:outputText value="#{bundle.ListEncounterBattleMemberTitle_id}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.id}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListEncounterBattleMemberTitle_encounterCharacter}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.encounterCharacter}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListEncounterBattleMemberTitle_encounterRecord}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.encounterRecord}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
                                 <h:outputText value="&nbsp;"/>
                             </f:facet>
                             <h:commandLink action="#{encounterBattleMemberController.prepareView}" value="#{bundle.ListEncounterBattleMemberViewLink}"/>
