--- a/web/encounterBattleMember/Create.xhtml
+++ b/web/encounterBattleMember/Create.xhtml
@@ -15,6 +15,14 @@
             </h:panelGroup>
             <h:form>
                 <h:panelGrid columns="2">
+                    <h:outputLabel value="#{bundle.CreateEncounterBattleMemberLabel_encounterCharacter}" for="encounterCharacter" />
+                    <h:selectOneMenu id="encounterCharacter" value="#{encounterBattleMemberController.selected.encounterCharacter}" title="#{bundle.CreateEncounterBattleMemberTitle_encounterCharacter}" >
+                        <f:selectItems value="#{encounterCharacterController.itemsAvailableSelectOne}"/>
+                    </h:selectOneMenu>
+                    <h:outputLabel value="#{bundle.CreateEncounterBattleMemberLabel_encounterRecord}" for="encounterRecord" />
+                    <h:selectOneMenu id="encounterRecord" value="#{encounterBattleMemberController.selected.encounterRecord}" title="#{bundle.CreateEncounterBattleMemberTitle_encounterRecord}" >
+                        <f:selectItems value="#{encounterRecordController.itemsAvailableSelectOne}"/>
+                    </h:selectOneMenu>
                 </h:panelGrid>
                 <br />
                 <h:commandLink action="#{encounterBattleMemberController.create}" value="#{bundle.CreateEncounterBattleMemberSaveLink}" />
