--- a/web/encounterRecord/View.xhtml
+++ b/web/encounterRecord/View.xhtml
@@ -17,6 +17,9 @@
                 <h:panelGrid columns="2">
                     <h:outputText value="#{bundle.ViewEncounterRecordLabel_id}"/>
                     <h:outputText value="#{encounterRecordController.selected.id}" title="#{bundle.ViewEncounterRecordTitle_id}"/>
+                    <h:outputText value="#{bundle.ViewEncounterRecordLabel_name}"/>
+                    <h:outputText value="#{encounterRecordController.selected.name}" title="#{bundle.ViewEncounterRecordTitle_name}"/>
+                                        
                     <h:outputText value="#{bundle.ViewEncounterRecordLabel_comments}"/>
                     <h:outputText value="#{encounterRecordController.selected.comments}" title="#{bundle.ViewEncounterRecordTitle_comments}"/>
                     <h:outputText value="#{bundle.ViewEncounterRecordLabel_round}"/>
