--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,15 +7,14 @@
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-        Hello from Facelets
         <h:form>
-            <h:commandLink action="/encounterBattleMember/List" value="Show All EncounterBattleMember Items"/>
+            <h:commandLink action="/encounterBattleMember/List" value="戦闘メンバー一覧"/>
         </h:form>
         <h:form>
-            <h:commandLink action="/encounterCharacter/List" value="Show All EncounterCharacter Items"/>
+            <h:commandLink action="/encounterCharacter/List" value="キャラクター一覧"/>
         </h:form>
         <h:form>
-            <h:commandLink action="/encounterRecord/List" value="Show All EncounterRecord Items"/>
+            <h:commandLink action="/encounterRecord/List" value="エンカウンター一覧"/>
         </h:form>
     </h:body>
 
